<resources>
    <string name="app_name">MeuTreino</string>
    <string name="btn_exercicios">Exercícios</string>
    <string name="btn_academia">Minha academia</string>
    <string name="btn_treino">Meu treino</string>
    <string name="txt_tempo_repeticao">Selecione o tipo de contagem:</string>
    <string-array name="spiner_tempo_repeticao">
        <item>Tempo</item>
        <item>Repetição</item>
    </string-array>
    <string name="hint_tempo_repeticao">Digite o tempo ou repetição</string>
    <string name="titulo_cadastro_treino">Cadastro Treino</string>
    <string name="txt_esportistas">Selecione o esportista:</string>
    <string name="btn_add">Adicionar aparelho</string>
    <string name="btn_rmv">Remover aparelho</string>
    <string name="txt_info_1">Antes de iniciar qualquer exercício, é recomendado que consulte um médico e faça uma análise sobre a sua saúde antes de qualquer exercício físico.</string>
    <string name="txt_info_2">Sempre faça alongamentos, eles previnem lesões musculares e ainda contribuem para a melhor flexibilidade no corpo.
        Alongue o pescoço, a região das pernas e principalmente a coluna, para que não ocorra grandes impactos em suas articulações.</string>
    <string name="titulo_minha_academia">Minha Academia</string>
    <string name="titulo_exercicios">Exercícios</string>
    <string name="titulo_usuarios">Usuários</string>
    <string name="msg_aparelho_inserido">Aparelho inserido.</string>
    <string name="msg_aparelho_removido">Aparelho removido.</string>
    <string name="hint_nome_user">Digite o nome do usuário</string>
    <string name="hint_email_user">Digite e-mail do usuário</string>
    <string name="hint_password">Digite a senha</string>
    <string name="hint_password_confirm">Digite novamente a senha</string>
    <string name="login">Login</string>
    <string name="msg_login_invalido">Dados incorretos.</string>
    <string name="pagina_inicial">Página inicial</string>
    <string name="cadastro">Cadastro</string>
    <string name="titulo_visao_geral">Visão geral</string>
    <string name="txt_educador">Educador físico</string>
    <string name="txt_esportista">Esportista</string>
    <string name="cadastrar_usuario">Cadastrar</string>
    <string name="btn_visualizar_usuarios">Usuários</string>
    <string name="btn_cadastrar_treino">Cadastrar treino</string>
    <string name="btn_treinos">Treinos</string>
    <string name="cadastrar_erro">Não foi possível cadastrar o usuário.</string>
    <string name="msg_senhas_diferentes">As senhas informadas não conferem.</string>
    <string name="txt_tipo_usuario">Selecione o tipo de usuário:</string>
    <string-array name="spiner_tipo_usuario">
        <item>Esportista</item>
        <item>Educador físico</item>
    </string-array>

</resources>