<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.geral.CadastroActivity">

    <TextView
        android:id="@+id/txt_titulo_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/cadastro"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_nome"/>

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:hint="@string/hint_nome_user"
        android:inputType="text"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_cadastro" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_email_user"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/edit_nome"
        app:layout_constraintTop_toBottomOf="@id/edit_nome" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_password"
        android:inputType="numberPassword"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/edit_nome"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <EditText
        android:id="@+id/edit_senha_confirmacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_password_confirm"
        android:inputType="numberPassword"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/edit_nome"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <TextView
        android:id="@+id/text_tipo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:text="@string/txt_tipo_usuario"
        app:layout_constraintStart_toStartOf="@id/edit_senha_confirmacao"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha_confirmacao"
        app:layout_constraintBottom_toTopOf="@id/spinner_tipo_usuario"/>

    <Spinner
        android:id="@+id/spinner_tipo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/text_tipo_usuario"
        app:layout_constraintTop_toBottomOf="@+id/text_tipo_usuario"/>

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/message"
        android:text="@string/cadastrar_usuario"
        app:layout_constraintTop_toBottomOf="@id/spinner_tipo_usuario"
        app:layout_constraintEnd_toEndOf="@id/edit_senha_confirmacao"/>

</androidx.constraintlayout.widget.ConstraintLayout>