<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.educador.CadastroTreinoActivity">

    <TextView
        android:id="@+id/txt_titulo_cadastro_treino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/titulo_cadastro_treino"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_nome_esportista"/>

    <TextView
        android:id="@+id/text_nome_esportista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:text="@string/txt_esportistas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_cadastro_treino"/>

    <Spinner
        android:id="@+id/spinner_esportista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/text_nome_esportista"
        app:layout_constraintTop_toBottomOf="@+id/text_nome_esportista"/>

    <TextView
        android:id="@+id/text_titulo_exercicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/titulo_exercicios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_esportista"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_atividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_titulo_exercicios"
        app:layout_constraintBottom_toTopOf="@id/button_salvar_treino"/>

    <Button
        android:id="@+id/button_salvar_treino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cadastrar_usuario"
        app:layout_constraintTop_toBottomOf="@id/recycler_atividades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>